# webvfx-rs

./: Cargo.toml  README.md
.github/workflows/: test.yml
crates/: build.rs
crates/test_support/: Cargo.toml  README.md
crates/test_support/src/: lib.rs
crates/test_support/testdata/: README.md  filter.html  mixer2.html  mixer3-dupe.html  mixer3.html  source-template.html  source-template.json  source.html  style.css
crates/webvfx/: Cargo.toml
crates/webvfx/src/: lib.rs  main.rs  plugin.rs  render.rs  renderer.rs
crates/webvfx/src/plugin/: filter.rs  mixer2.rs  mixer3.rs  source.rs
crates/webvfx/src/renderer/: net.rs  processor.rs
crates/webvfx/testdata/: README.md  filter.html  source.html
crates/webvfx_filter/: Cargo.toml
crates/webvfx_filter/src/: lib.rs
crates/webvfx_mixer2/: Cargo.toml
crates/webvfx_mixer2/src/: lib.rs
crates/webvfx_mixer3/: Cargo.toml
crates/webvfx_mixer3/src/: lib.rs
crates/webvfx_source/: Cargo.toml
crates/webvfx_source/src/: lib.rs
crates/webvfx_test_support/: Cargo.toml
crates/webvfx_test_support/testdata/: mixer2.html
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
