[workspace]
resolver = "3"
members = [
    "crates/webvfx",
    "crates/webvfx_filter",
    "crates/webvfx_mixer2",
    "crates/webvfx_mixer3",
    "crates/webvfx_source",
    "crates/webvfx_test_support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/rectalogic/webvfx-rs"
readme = "README.md"

[workspace.dependencies]
frei0r-rs2 = { git = "https://github.com/rectalogic/frei0r-rs.git", tag = "2.3.0" }

[profile.release]
lto = true
