[workspace]
resolver = "3"
members = [
    "crates/webvfx",
    "crates/webvfx_filter",
    "crates/webvfx_mixer2",
    "crates/webvfx_mixer3",
    "crates/webvfx_source",
    "crates/test_support",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/rectalogic/webvfx-rs"
readme = "README.md"

[workspace.dependencies]
frei0r-rs2 = { git = "https://github.com/rectalogic/frei0r-rs.git", tag = "2.3.0" }
image = { version = "0.25", default-features = false, features = ["png"] }  # Version required by blitz-dom
webvfx = { path = "crates/webvfx" }
test_support = { path = "crates/test_support" }
anyhow = "1.0.100"
cfg-if = "1.0.4"
data-url = "0.3.2"
anyrender = "0.6.2"
anyrender_vello = { version = "0.6.1", default-features = false }
anyrender_vello_cpu = { version = "0.8.1", default-features = false }
anyrender_skia = { version = "0.2.0", default-features = false }
linebender_resource_handle = "0.1"
winit = { version = "0.30" }
argh = { version = "0.1" }
# Don't depend on blitz meta-crate
# https://github.com/DioxusLabs/blitz/issues/301
blitz-dom = { git = "https://github.com/DioxusLabs/blitz.git", rev = "60be177", default-features = false, features = ["svg", "system_fonts", "woff-rust"] }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz.git", rev = "60be177", default-features = false, features = ["svg"] }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz.git", rev = "60be177", default-features = false }
blitz-html = { git = "https://github.com/DioxusLabs/blitz.git", rev = "60be177", default-features = false }
blitz-net = { git = "https://github.com/DioxusLabs/blitz.git", rev = "60be177", default-features = false }
blitz-shell = { git = "https://github.com/DioxusLabs/blitz.git", rev = "60be177", default-features = false }

[profile.release]
lto = true
