[workspace]
resolver = "3"
members = [
    "crates/webvfx",
    "crates/webvfx_filter",
    "crates/webvfx_mixer2",
    "crates/webvfx_mixer3",
    "crates/webvfx_source",
    "crates/test_support",
    "crates/xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-or-later"
repository = "https://github.com/rectalogic/webvfx-rs"
description = "frei0r plugins that implement visual effects using HTML"
readme = "README.md"
keywords = ["frei0r", "video", "html", "vfx"]
categories = ["multimedia", "multimedia::video"]

[workspace.dependencies]
anyhow = "1.0.100"

[profile.release]
lto = true

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
cast_possible_truncation = "allow"
multiple_crate_versions = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
