[package]
name = "webvfx"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow = "1.0.100"
frei0r-rs2 = { workspace = true }
anyrender = "0.6.2"
anyrender_vello = "0.6.1"
blitz = "0.2.1"

# Indirect dependencies, specify these with default features since blitz doesn't expose feature flags
# https://github.com/DioxusLabs/blitz/issues/301
blitz-dom = "*"
blitz-paint = "*"

[dev-dependencies]
image = { workspace = true }
test_support = { workspace = true }
