[package]
name = "webvfx"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "webvfx_viewer"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
cfg-if = { workspace = true }
data-url = { workspace = true }
frei0r-rs2 = { workspace = true }
anyrender = { workspace = true }
anyrender_vello = { workspace = true, optional = true }
anyrender_vello_cpu = { workspace = true, optional = true }
anyrender_skia = { workspace = true, optional = true }
linebender_resource_handle = { workspace = true }
winit = { workspace = true }
smallvec = { workspace = true }
argh = { workspace = true }

# Don't depend on blitz meta-crate
# https://github.com/DioxusLabs/blitz/issues/301
blitz-dom = { workspace = true }
blitz-paint = { workspace = true }
blitz-traits = { workspace = true }
blitz-html = { workspace = true }
blitz-net = { workspace = true }
blitz-shell = { workspace = true }

[dev-dependencies]
image = { workspace = true }
test_support = { workspace = true }

[features]
default = ["anyrender_vello"]
anyrender_vello = ["dep:anyrender_vello"]
anyrender_vello_cpu = ["dep:anyrender_vello_cpu"]
anyrender_skia = ["dep:anyrender_skia"]

[lints]
workspace = true
