[package]
name = "webvfx"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
default-run = "webvfx_viewer"

[[bin]]
name = "webvfx_viewer"
path = "src/main.rs"
required-features = ["anyrender_vello"]

[dependencies]
frei0r-rs2 = { git = "https://github.com/rectalogic/frei0r-rs.git", tag = "2.3.0" }
anyhow = { workspace = true }
cfg-if = { workspace = true }
data-url = "0.3.2"
anyrender = "0.6.2"
anyrender_vello = { version = "0.6.1", default-features = false, optional = true }
anyrender_vello_cpu = { version = "0.8.1", default-features = false, optional = true }
anyrender_skia = { version = "0.2.0", default-features = false, optional = true }
linebender_resource_handle = "0.1"
winit = "0.30"
smallvec = "1.15"
argh = "0.1"
serde_json = "1.0.145"
tera = "1.20.1"
tracing-subscriber = { version = "0.3.22", optional = true }

# Don't depend on blitz meta-crate
# https://github.com/DioxusLabs/blitz/issues/301
blitz-dom = { git = "https://github.com/DioxusLabs/blitz.git", rev = "f0b02b8", default-features = false, features = ["svg", "system_fonts", "woff-rust"] }
blitz-paint = { git = "https://github.com/DioxusLabs/blitz.git", rev = "f0b02b8", default-features = false, features = ["svg"] }
blitz-traits = { git = "https://github.com/DioxusLabs/blitz.git", rev = "f0b02b8", default-features = false }
blitz-html = { git = "https://github.com/DioxusLabs/blitz.git", rev = "f0b02b8", default-features = false }
blitz-net = { git = "https://github.com/DioxusLabs/blitz.git", rev = "f0b02b8", default-features = false }
blitz-shell = { git = "https://github.com/DioxusLabs/blitz.git", rev = "f0b02b8", default-features = false }
reqwest = { version = "0.12.26", features = ["blocking"] }

[dev-dependencies]
test_support = { path = "../test_support" }

[features]
default = ["anyrender_vello"]
anyrender_vello = ["dep:anyrender_vello", "test_support/anyrender_vello"]
anyrender_vello_cpu = ["dep:anyrender_vello_cpu", "test_support/anyrender_vello_cpu"]
anyrender_skia = ["dep:anyrender_skia", "test_support/anyrender_skia"]
tracing = ["blitz-dom/tracing", "blitz-paint/tracing", "blitz-shell/tracing", "dep:tracing-subscriber"]

[lints]
workspace = true
