[package]
name = "webvfx_mixer3"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
webvfx = { path = "../webvfx" }

[dev-dependencies]
test_support = { path = "../test_support" }

[lints]
workspace = true
