[package]
name = "webvfx_source"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
build = "../build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
webvfx = { workspace = true }

[dev-dependencies]
test_support = { workspace = true }

[lints]
workspace = true
