[package]
name = "xtask"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
description.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
publish = false

[dependencies]
glob = "0.3.3"
anyhow = { workspace = true }
